fix: Refactor ReservationDTO